IRtest_out/075_matrix_sub.err
irs/075_matrix_sub.ll:40:29: error: invalid getelementptr indices
  %v44 = getelementptr i32, i32* %v30, i32 0, i32 %v43
                            ^
1 error generated.
